[package]
name = "xlsx_export"
version = "0.1.0"
authors = ["Aleksei Kolosov <akolosov@xbsoftware.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"

[dependencies]
serde = "^1.0.89"
serde_derive = "^1.0.89"
quick-xml = "0.13.3"
zip = { version = "0.5.1", default-features = false, features = ["deflate"] }
wasm-bindgen = {version = "0.2.40", features = ["serde-serialize"]}
