[package]
name = "excel2json-wasm"
version = "0.2.0"
authors = ["Aleksei Kolosov <akolosov@xbsoftware.com>", "Maksim Kozhukh <mk@mono.ink>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version="^1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
quick-xml = "0.28.2"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
gloo-utils = { version = "0.1", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
